ui2: fix list view overflow from header

--- a/src/App.css
+++ b/src/App.css
@@ -3555,7 +3555,7 @@
   }
   
   .dashboardGreetingContainer {
-    height: calc(100vh - 50px);
+    height: calc(100vh - 50px - 34px);
     text-align: center;
     overflow: auto;
     box-sizing: border-box;
@@ -3800,7 +3800,6 @@
     padding-right: 8px;
     color: var(--secondary-text);
     margin-top: 16px;
-    margin-bottom: 8px;
   }
 
   .listViewHeaderRightWrapper {
